--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "linkedin",
         "mdbreact",
         "noopener",
-        "noreferrer"
+        "noreferrer",
+        "pdfviewer",
+        "phuocng"
     ]
 }
