--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
+    "emailjs-com": "^2.6.4",
     "mdbreact": "^5.0.1",
     "pdfjs-dist": "^2.4.456",
     "react": "^17.0.1",
