--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,25 @@
 {
     "cSpell.ignoreWords": [
+        "a",
+        "bf",
+        "bqjduj",
+        "fgxv",
         "indo",
+        "j",
         "juzva",
+        "l",
         "linkedin",
         "mdbreact",
+        "ml",
+        "n",
         "noopener",
         "noreferrer",
         "pdfviewer",
-        "phuocng"
+        "phuocng",
+        "pu",
+        "template",
+        "user",
+        "w",
+        "yy"
     ]
 }
