adding some fun stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "linkedin",
         "mdbreact",
         "ml",
+        "monospace",
         "n",
         "noopener",
         "noreferrer",
