--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "pdfjs-dist": "^2.4.456",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-parallax": "^3.1.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
+    "react-tooltip": "^4.2.13",
     "reactstrap": "^8.9.0",
+    "reveal": "0.0.4",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
