--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mdbreact": "^5.0.1",
     "pdfjs-dist": "^2.4.456",
     "react": "^17.0.1",
+    "react-contain-textbox": "^0.1.2",
     "react-dom": "^17.0.1",
     "react-parallax": "^3.1.2",
     "react-reveal": "^1.2.2",
@@ -20,6 +21,7 @@
     "reactstrap": "^8.9.0",
     "reveal": "0.0.4",
     "styled-components": "^5.2.1",
+    "typestyle": "^2.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
