adding new project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "bf",
         "bqjduj",
         "browserslist",
+        "browsjungle",
         "fgxv",
         "indo",
         "j",
@@ -17,6 +18,7 @@
         "n",
         "noopener",
         "noreferrer",
+        "olynyk",
         "pdfviewer",
         "phuocng",
         "pu",
