--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "noopener",
         "noreferrer",
         "olynyk",
+        "palevioletred",
         "pdfviewer",
         "phuocng",
         "pu",
